# websocket-adventures

./: .#multiuser.py  NOTES.org  bsod.py  chatapp.py  client.py  cltest.py  hserver.py  main.py  multiuser.py  nginx.conf  pyproject.toml  simple-serv.py  snow.py  tui.py  ws.html
src/chat/: chatgpt.py  claude_serv.py  client.py  cltest.py  communication.py  protocoltypes.py  server.py  utils.py
