[project]
name = "websocket-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.9.0",
    "msgpack>=1.1.2",
    "textual>=7.2.0",
    "textual-dev>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pdbpp==0.12.0rc2",
]
